styles/global.css
body {
  font-family: "Overpass Mono", monospace;
  background-color: #263238;
  color: #fff;
}

.grid {
  display: grid;
  grid-template-columns: 50% 50%;
  grid-template-rows: 50% 50%;
}

.grid-item {
  justify-self: center;
  align-self: center;
}

.meridian-wrapper {
  position: relative;
}

.time {
  font-size: 4vw;
  text-align: center;
  line-height: 0.55;
}

.meridian {
  position: absolute;
  bottom: 0;
  right: -14%;
  color: gray;
  font-size: 2vw;
  line-height: 0.55;
}

.label {
  margin: 10px 0 0;
  text-align: center;
  font-size: 20px;
  color: #bbb;
}

#unix-time-milliseconds {
  color: gray;
  font-size: 2vw;
  line-height: 0.55;
}

/* #swatch-time {
  color: #333;
} */

